# DMLabelTool

./: .gitignore  README.md  dm_label_generator.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
example/: BD40000001.psd
examples/: README.md
packaging/: dm_label_tool_gui.spec
src/dm_label_tool/: __init__.py  __main__.py  cli.py  config.py  core.py  errors.py  gui.py  main.py
tests/: test_core.py
